[workspace]
resolver = "3"
members = [
    "extension-pack",
]
default-members = [
    "extension-pack",
]

[workspace.package]
edition = "2024"
authors = ["hardliner66"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/extension-pack/extension-pack"
documentation = "https://docs.rs/extension-pack/latest/extension-pack/"

[workspace.dependencies]
extension-pack = { version = "0.1.0", path = "extension-pack" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
